BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Internal_Activity_BMS__c.object
<CustomObject>
    <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design:  Custom object to store information for the field medical team regarding what MSLs are working on when they are not in the field.</description>
    <fields>
        <fullName>Activity_Description_BMS__c</fullName>
        <label>Activity Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Type_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the type of internal activity.</description>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>HQ Based Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Strategy / DAS Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting - Medical / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - RCO / GDO / Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel / Transfer / Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting / TC - Brand Team (Commercial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Self</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the date of an internal activity.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Activity_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture other internal activity types.</description>
        <label>Other Activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the status of an internal activity.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the number of hours spend on an internal activity.</description>
        <label>Time</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>¼ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>½ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>¾ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 ¼ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 ½ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 ¾ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 ¼ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 ½ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 ¾ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 ¼ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 ½ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 ¾ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thru 5 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RAD Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type_BMS__c</columns>
        <columns>Time_BMS__c</columns>
        <columns>Date_BMS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Interal_Activities</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type_BMS__c</columns>
        <columns>Time_BMS__c</columns>
        <columns>Date_BMS__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Interal Activities</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Internal Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAD Tracking</pluralLabel>
    <recordTypes>
        <fullName>BMS_Intercon_SA_IA</fullName>
        <active>true</active>
        <description>Used for BMS Intercon users</description>
        <label>BMS-Intercon-SA-IA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>